--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       letter-spacing:-0.2px;
     }
     .hero-title .br{display:block; font-size: 3.75rem;}
-    .brand-accent{ color:var(--accent-brown) }
+    .brand-accent{ color: #66503D }
 
     .hero-sub{
       margin:0 0 28px;
@@ -159,7 +159,7 @@
 
     .hero-chips{ display:flex; gap:10px; flex-wrap:wrap }
     .chip{
-      background:var(--chip-bg); color:var(--txt-chip);
+      background:var(--chip-bg); color: #37322F;
       padding:7px 14px; border-radius:999px; font-size:14px; font-weight:600; letter-spacing:0.1px;
     }
 
@@ -178,7 +178,7 @@
       height: 0;
     }
     .hero-photo-frame{ aspect-ratio: 4 / 5; width:100%; max-height:584px }
-    .hero-photo img{ width:100%; height:100%; object-fit:cover; transition: transform 0.3s ease }
+    .hero-photo img{ width:0; height:0; object-fit:cover; transition: transform 0.3s ease }
     .hero-photo:hover img { transform: scale(1.02); }
 
     /* =========================
@@ -212,7 +212,7 @@
       max-width:820px; margin:0 auto 34px; text-align:center;
       background:var(--accent-quote); border-radius:14px;
       padding:18px 22px;
-      color:var(--accent-brown);        /* коричневый текст цитаты */
+      color: #66503D;        /* коричневый текст цитаты */
       font-size: 1.125rem; line-height:1.6; font-style:italic;font-weight: 500;
       border:1px solid rgba(0,0,0,0.04);
       transition: background 0.3s ease;
@@ -249,10 +249,11 @@
     }
     .requests .title{
       font-size:38px; font-weight:800; text-align:center; margin:0 0 10px;
-      letter-spacing:.2px; color:var(--accent-brown);
+      letter-spacing:.2px; color: #66503D;
     }
     .requests .subtitle{
-      text-align:center; color:#8A8E8A; font-size:17px; line-height:1.6; margin:0 0 28px;
+      text-align:center; color:#8A8E8A; font-size: 1.125rem;
+    line-height: 1.75rem; margin:0 0 40px;
     }
 
     .cards{
@@ -350,12 +351,13 @@
       border-top: 1px solid rgba(0,0,0,0.05);
     }
     .prices .title{
-      text-align:center; color:var(--accent-brown);
+      text-align:center; color: #66503D;
       font-weight:800; font-size:38px; margin:0 0 12px;
       letter-spacing:.2px;
     }
     .prices .subtitle{
-      text-align:center; color:#8A8E8A; font-size:17px; margin:0 0 30px;
+      text-align:center; color:#8A8E8A; font-size: 1.125rem;
+    line-height: 1.75rem; margin:0 0 30px;
     }
     .price-grid{
       max-width:980px; margin:0 auto 22px;
@@ -387,7 +389,8 @@
       transition:.2s;
     }
     .price-btn:hover{ background:var(--price-btn-hover) }
-    .prices-note{ text-align:center; color:#9AA09A; font-size:14px; margin-top:18px }
+    .prices-note{ text-align:center; color:#9AA09A; font-size: .875rem;
+    line-height: 1.25rem; margin-top:18px }
 
     /* Заглушки / футер */
     section.placeholder{ padding:64px 0; border-top:1px dashed rgba(0,0,0,0.06) }
@@ -401,11 +404,21 @@
       .hero-title { font-size: 52px; }
       .hero-grid { gap: 48px; height: auto; }
       .hero-photo-frame { max-height: 520px; }
+      .ct-note {text-align: center;}
     }
 
     @media (max-width: 1100px){
       .hero-title{ font-size:50px }
       .hero-grid{ gap:42px }
+      .hero-title .br {
+        font-weight: 700;
+        font-size: 1.875rem;
+        line-height: 1.25;
+      }
+      .hero-sub {
+        font-size: 1.25rem;
+        margin-top:20px;
+      }
     }
 
     @media (max-width: 1024px) {
@@ -464,7 +477,7 @@
       }
      .hero-photo {
         order: 2; /* фото сразу после заголовка */
-        max-width: 100%;
+        max-width: 0;
       }
       .hero-photo-1 {
         order: 2; /* фото сразу после заголовка */
@@ -477,8 +490,6 @@
       .hero-title{ font-size:42px; line-height:1.13 }
       .hero-sub{ font-size:15.8px }
       .hero-left{ transform:none }
-      .hero-actions { display: none; } /* Hide on mobile, use fixed */
-      .hero-chips { display: none; } /* Hide on mobile */
 
       .about{ padding:44px 0 56px }
       .about .title{ font-size:30px; margin-bottom:22px }
@@ -501,7 +512,7 @@
       .hero-title { font-size: 38px; }
       .hero-sub { font-size: 15px; }
       .about .title { font-size: 28px; }
-      .about .lead { font-size: 1rem; }
+      .about .lead { font-size: 1.125rem;}
       .about .quote { font-size: 1rem; padding: 16px 20px; }
       .requests .title { font-size: 28px; }
       .steps .title { font-size: 28px; }
@@ -512,6 +523,9 @@
       .step-title { font-size: 19px; }
       .step-text { font-size: 15px; }
       .price-title { font-size: 20px; }
+      .hero-sub {
+        font-size: 1.25rem;
+      }
     }
     @media (max-width: 560px){
       :root{ --gutter:16px }
@@ -522,10 +536,10 @@
       .chip{ font-size:13.5px; padding:6px 12px;  background: none;}
       .hero-photo{ border-radius:20px }
 
-      .about .lead{ font-size:15.5px }
-      .about .quote{ font-size:15px; padding:16px 18px }
+      .about .lead{ font-size: 1.125rem; }
+      .about .quote{ font-size: 1.125rem; padding:16px 18px }
 
-      .card{ padding:22px 20px }
+      .card{ padding:22px 20px; }
       .card h3{ font-size:18.5px }
       .price-value{ font-size:30px }
       .fixed-div { font-size: 15px; height: 52px; }
@@ -1053,7 +1067,7 @@
 .btn-send svg{ width:18px; height:18px; stroke:#fff }
 
 /* подпись под кнопкой */
-.ct-note{ font-size:13.5px; color:#A0A39F; text-align:left }
+.ct-note{ font-size:13.5px; color:#A0A39F; }
 
 /* Адаптив */
 @media (max-width: 980px){
@@ -1225,21 +1239,6 @@
   background: var(--btn-primary-hover);
 }
 
-@media (max-width: 920px) {
-  .burger {
-    display: block;
-  }
-  .header-cta {
-    display: none;
-  }
-  .hero-actions .btn-secondary,
-  .hero-chips {
-    display: none; /* Hide secondary button and chips on mobile to match image */
-  }
-  .hero-actions .btn-primary {
-    display: none; /* Hide main button in hero, use fixed instead */
-  }
-}
   </style>
 </head>
 <body>
