--- a/index.html
+++ b/index.html
@@ -85,101 +85,140 @@
     .container{max-width: var(--container); margin:0 auto; padding:0 var(--gutter) }
 
     /* =========================
-       ХЕДЕР
-       ========================= */
-    .site-header{
-      width: 100%;
-      position:fixed; top:0; z-index:100;
-      backdrop-filter:saturate(160%) blur(8px);
-      background:rgba(255,255,255,0.78);
-      border-bottom:1px solid rgba(0,0,0,0.06);
-      transition: all 0.3s ease;
-    }
-    .header-inner{ height:var(--header-h); display:flex; align-items:center; justify-content:space-between }
-    .brand{ font-weight:800; font-size:19px; letter-spacing:0.1px; color:var(--accent-brown); transition: color 0.2s ease }
-    .nav{ display:flex; align-items:center; gap:28px; font-size:15px }
-    .nav a{opacity:.95; transition: opacity 0.2s ease}
-    .nav a:hover { opacity: 1; }
-    .header-cta{
-      margin-left:8px; padding:10px 18px;
-      background:var(--btn-primary); color:#fff;
-      border-radius:12px; font-weight:700; transition:.2s ease;
-      box-shadow:0 1px 0 rgba(0,0,0,0.02) inset;
-    }
-    .header-cta:hover{ background:var(--btn-primary-hover) }
-   .fixed-booking-btn {
-    display: none;
-    height: 0;
-    color: hsla(0, 0%, 100%, 0);
-  }
-    /* =========================
-       HERO (первый экран)
-       ========================= */
-    .hero{ padding: calc(var(--header-h) + 76px) 0 56px; transition: padding 0.3s ease }
-    .hero-grid{
-      display:grid;
-      grid-template-columns: 1.10fr 0.90fr; /* чуть больше воздуха слева */
-      gap:52px; align-items:center;
-      height: 584px;
-    }
-    /* Смещаем левую колонку как на скрине */
-    @media (min-width: 1060px){ .hero-left{ transform: translateX(-10px); order: 1; max-height: 475px;} }
+   ХЕДЕР + МОБИЛЬНОЕ МЕНЮ
+   ========================= */
+.site-header{
+  position:fixed; top:0; left:0; right:0; z-index:120;
+  backdrop-filter:saturate(160%) blur(8px);
+  background:rgba(255,255,255,0.78);
+  border-bottom:1px solid rgba(0,0,0,0.06);
+  transition: all .25s ease;
+}
+.header-inner{ height:var(--header-h); display:flex; align-items:center; justify-content:space-between; padding: 16px; margin: 0 20px 0 20px; }
+.brand{ font-weight:800; font-size:19px; letter-spacing:.1px; color:var(--accent-brown) }
 
-    .hero-title{
-      margin:0 0 18px;
-      font-weight:800;
-      font-size:56px;
-      line-height:1.08;
-      letter-spacing:-0.2px;
-    }
-    .hero-title .br{display:block; font-size: 3.75rem;}
-    .brand-accent{ color: #66503D }
+.nav{ display:flex; align-items:center; gap:28px; font-size:15px }
+.nav a{ opacity:.95; transition:opacity .15s ease }
+.nav a:hover{ opacity:1 }
+.header-cta{
+  margin-left:8px; padding:10px 18px; background:var(--btn-primary); color:#fff;
+  border-radius:12px; font-weight:700; transition:.2s ease; box-shadow:0 1px 0 rgba(0,0,0,0.02) inset;
+}
+.header-cta:hover{ background:var(--btn-primary-hover) }
 
-    .hero-sub{
-      margin:0 0 28px;
-      font-size: 1.25rem;
-      line-height:1.58;
-      color:var(--txt-muted);
-      max-width:720px;
-    }
+/* Бургер — показываем только на мобиле */
+.burger{ display:none; background:none; border:0; padding:10px; margin-left:8px; cursor:pointer }
+.burger svg{ width:28px; height:28px; }
+.burger svg line{ stroke:#3B3B3B; stroke-width:2; stroke-linecap:round }
 
-    .hero-actions{ display:flex; gap:16px; flex-wrap:wrap; margin:0 0 22px }
-    .btn-primary{
-      background:var(--btn-primary); color:#fff;
-      padding:14px 28px; border-radius:var(--radius-sm);
-      font-weight:700; font-size:15.5px; transition:.2s;
-    }
-    .btn-primary:hover{ background:var(--btn-primary-hover) }
-    .btn-secondary{
-      background:var(--btn-secondary-bg); border:1px solid var(--btn-secondary-bd);
-      color:#2B2B2B; padding:14px 28px; border-radius:var(--radius-sm);
-      font-weight:700; font-size:15.5px; transition:.2s;
-    }
-    .btn-secondary:hover{ background:#F5F5F5 }
+/* Мобильное меню */
+.mobile-menu{
+  position:fixed; inset:0; z-index:200;
+  background:#fff; transform:translateY(-100%); transition:transform .25s ease;
+  display:flex; flex-direction:column;
+}
+.mobile-menu.open{ transform:translateY(0) }
+.menu-header{
+  height:64px; padding:0 20px; display:flex; align-items:center; justify-content:space-between;
+  border-bottom:1px solid rgba(0,0,0,0.06);
+}
+.menu-brand{ font-weight:800; color:var(--accent-brown) }
+.menu-close{ background:none; border:0; font-size:30px; line-height:1; cursor:pointer; color:#444 }
+.menu-nav{ display:flex; flex-direction:column; gap:24px; padding:20px; font-size:18px }
+.menu-nav a{ color:#222426 }
+.menu-cta{
+  margin:16px 20px 20px; background:var(--btn-primary); color:#fff; text-align:center;
+  font-weight:800; border-radius:12px; padding:14px 18px;
+}
 
-    .hero-chips{ display:flex; gap:10px; flex-wrap:wrap }
-    .chip{
-      background:var(--chip-bg); color: #37322F;
-      padding:7px 14px; border-radius:999px; font-size:14px; font-weight:600; letter-spacing:0.1px;
-    }
+/* =========================
+   HERO (первый экран)
+   ========================= */
+.hero{ padding: calc(var(--header-h) + 36px) 0 96px }
+.hero-grid{
+  display:flex;justify-content: space-between; grid-template-columns: 1.1fr 0.9fr; gap:48px; align-items:center; padding: 64px 16px 64px 16px; margin: 0 20px 0 20px;
+}
+.hero-title{
+  margin:0 0 14px; font-weight:800; font-size:56px; line-height:1.08; letter-spacing:-0.2px; color:#222426;
+}
+.hero-title .br{ display:block }
+.brand-accent{ color:#9B6A44 }
+.hero-sub{ margin:14px 0 22px; font-size:17px; line-height:1.58; color:var(--txt-muted); max-width:720px }
 
-    .hero-photo{
-      background:#fff; border-radius:var(--radius-lg); overflow:hidden;
-      border:1px solid rgba(0,0,0,0.05); box-shadow:0 12px 28px rgba(0,0,0,0.06);
-      order: 2;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .hero-photo:hover { transform: translateY(-5px); box-shadow:0 16px 32px rgba(0,0,0,0.08); }
-    .hero-photo-1{
-      background:#fff; border-radius:var(--radius-lg); overflow:hidden;
-      border:1px solid rgba(0,0,0,0.05); box-shadow:0 12px 28px rgba(0,0,0,0.06);
-      order: 2;
-      width: 0;
-      height: 0;
-    }
-    .hero-photo-frame{ aspect-ratio: 4 / 5; width:100%; max-height:584px }
-    .hero-photo img{ width:0; height:0; object-fit:cover; transition: transform 0.3s ease }
-    .hero-photo:hover img { transform: scale(1.02); }
+.hero-actions{ display:flex; gap:16px; flex-wrap:wrap; margin:0 0 18px }
+.btn-primary{
+  background:var(--btn-primary); color:#fff; padding:14px 28px; border-radius:var(--radius-sm);
+  font-weight:700; font-size:15.5px; transition:.2s;
+}
+.btn-primary:hover{ background:var(--btn-primary-hover) }
+.btn-secondary{
+  background:var(--btn-secondary-bg); border:1px solid var(--btn-secondary-bd);
+  color:#2B2B2B; padding:14px 28px; border-radius:var(--radius-sm); font-weight:700; font-size:15.5px;
+}
+
+.hero-chips{ display:flex; gap:10px; flex-wrap:wrap }
+.chip{ background:var(--chip-bg); color:#37322F; padding:7px 14px; border-radius:999px; font-size:14px; font-weight:600 }
+
+/* Фото справа (десктоп) */
+.hero-photo{
+  background:#fff; border-radius:24px; overflow:hidden;
+  border:1px solid rgba(0,0,0,0.05); box-shadow:0 12px 28px rgba(0,0,0,0.06);
+  margin: 0 106px 0 106px
+}
+.hero-photo-frame{ aspect-ratio: 4 / 5; width:100% }
+.hero-photo img{ width:100%; height:100%; object-fit:cover }
+
+/* Мобильное фото под заголовком */
+.hero-photo-1{ display:none } /* прячем на десктопе */
+.hero-photo-1 .hero-photo-frame{ aspect-ratio:4 / 5 }
+
+/* =========================
+   ФИКС-КНОПКА "ЗАПИСАТЬСЯ"
+   ========================= */
+.fixed-booking-btn{
+  position:fixed; left:max(16px, env(safe-area-inset-left)); right:max(16px, env(safe-area-inset-right));
+  bottom:max(12px, env(safe-area-inset-bottom)); z-index:300;
+  display:none;
+}
+.fixed-booking-btn .fixed-div{
+  display:flex; align-items:center; justify-content:center; gap:10px;
+  height:56px; border-radius:14px; background:var(--price-btn); color:#fff; font-weight:800; letter-spacing:.1px;
+  box-shadow:0 12px 28px rgba(0,0,0,0.18);
+}
+
+/* =========================
+   АДАПТИВ
+   ========================= */
+@media (max-width: 1100px){
+  .hero-title{ font-size:50px }
+}
+
+@media (max-width: 920px){
+  .nav{ display:none }
+  .burger{ display:block }
+  .header-cta{ display:none }
+
+  .hero{ padding: calc(var(--header-h) + 18px) 0 110px }
+  .hero-grid{ grid-template-columns:1fr; gap:18px }
+  .hero-title{ font-size:38px; line-height:1.14; letter-spacing:-0.15px }
+  .hero-sub{ font-size:15.8px; margin-top:6px }
+
+  .hero-photo{ display:none }          /* убираем правое фото */
+  .hero-photo-1{ display:block; background:#fff; border-radius:20px; overflow:hidden; border:1px solid rgba(0,0,0,0.05); box-shadow:0 12px 28px rgba(0,0,0,0.06) }
+
+  .hero-actions a{ width:100%; text-align:center }
+  .chip{ font-size:13.5px; padding:6px 12px }
+
+  .fixed-booking-btn{ display:block }
+  body.has-fixed-cta{ padding-bottom:88px }
+}
+
+@media (max-width:560px){
+  :root{ --gutter:16px }
+  .brand{ font-size:18px }
+  .hero-title{ font-size:34px }
+  .fixed-booking-btn .fixed-div{ height:52px; font-size:15px }
+}
 
     /* =========================
        ABOUT — "Обо мне"
@@ -402,7 +441,7 @@
     @media (max-width: 1200px) {
       :root { --container: 1024px; --gutter: 32px; }
       .hero-title { font-size: 52px; }
-      .hero-grid { gap: 48px; height: auto; }
+      .hero-grid { gap: 48px; height: auto; margin: 0;}
       .hero-photo-frame { max-height: 520px; }
       .ct-note {text-align: center;}
     }
@@ -432,7 +471,7 @@
 
     @media (max-width: 920px){
       .nav{ display:none }
-      .header-inner{ justify-content:space-between }
+      .header-inner{ justify-content:space-between; margin: 0; padding: 20px;}
       .header-cta { display: none; }
       .fixed-booking-btn {
         display: block;
@@ -485,7 +524,6 @@
         max-width: 100%;
         height: auto;
       }
-      .hero{ padding: calc(var(--header-h) + 58px) 0 40px }
       .hero-grid{ grid-template-columns:1fr; gap:28px }
       .hero-title{ font-size:42px; line-height:1.13 }
       .hero-sub{ font-size:15.8px }
@@ -989,7 +1027,7 @@
 }
 .contacts .title{
   text-align:center; font-size:38px; font-weight:800;
-  color:#2B2B2B; letter-spacing:.2px; margin:0 0 32px;
+  color:#2B2B2B; letter-spacing:.2px; margin:0 0 50px;
 }
 .contacts-grid{
   max-width:1040px; margin:0 auto;
@@ -1067,7 +1105,7 @@
 .btn-send svg{ width:18px; height:18px; stroke:#fff }
 
 /* подпись под кнопкой */
-.ct-note{ font-size:13.5px; color:#A0A39F; }
+.ct-note{ font-size:13.5px; color:#A0A39F; text-align: center;}
 
 /* Адаптив */
 @media (max-width: 980px){
@@ -1075,7 +1113,7 @@
   .ct-cards{ grid-template-columns:1fr 1fr }
 }
 @media (max-width: 560px){
-  .contacts .title{ font-size:30px; margin-bottom:24px }
+  .contacts .title{ font-size:30px; margin-bottom:50px }
   .ct-cards{ grid-template-columns:1fr; gap:14px }
 }
 
@@ -1093,9 +1131,10 @@
 .footer-title{
   margin:0 0 14px;
   font-weight:800;
-  font-size:28px;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
   letter-spacing:.2px;
-  color:#FFFFFF;
+  color:#FBFAF9;
 }
 .footer-row{
   display:flex;
@@ -1103,8 +1142,8 @@
   justify-content:center;
   gap:10px;
   margin:0 0 16px;
-  color:rgba(255,255,255,0.92);
-  font-size:18px;
+  color: #FBFAF9;
+  font-size:1.05rem;
   line-height:1.5;
 }
 .footer-row .pin{
@@ -1114,17 +1153,16 @@
 .footer-row:hover .pin { opacity: 1; }
 .footer-sub{
   margin:0 0 22px;
-  color:rgba(255,255,255,0.9);
-  font-size:20px;
+  color:#FBFAF9CC;
+  font-size:1.05rem;
   line-height:1.6;
 }
 .footer-links{
   display:inline-flex; align-items:center; gap:12px;
-  color:#FFFFFF;
-  font-size:18px;
+  color:#FBFAF9B2;
+  font-size:0.9rem;
 }
 .footer-links a{
-  color:#FFFFFF;
   text-decoration:none;
   opacity:.9;
   transition: opacity 0.2s ease;
@@ -1245,7 +1283,7 @@
 
   <!-- ===== ХЕДЕР ===== -->
   <header class="site-header">
-    <div class="container header-inner">
+    <div class="header-inner">
       <div class="brand">Евгения Беленко</div>
       <nav class="nav">
         <a href="#home">Главная</a>
@@ -1283,7 +1321,7 @@
 
   <!-- ===== HERO (первый экран) ===== -->
   <section id="home" class="hero">
-    <div class="container hero-grid">
+    <div class="hero-grid">
       <div class="hero-left">
         <h1 class="hero-title">
           <span class="br">Дипломированный</span>
@@ -1845,7 +1883,7 @@
       <div class="res-stack">
         
         <!-- 1 -->
-        <article class="res-acc" aria-expanded="true">
+        <article class="res-acc" aria-expanded="false">
           <header class="res-head" role="button">
             <div class="res-h">5 признаков, что пришло время к психологу</div>
             <svg class="res-chev" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
@@ -1925,7 +1963,7 @@
 
       <div class="faq-stack">
         <!-- 1 -->
-        <article class="faq-acc" aria-expanded="true">
+        <article class="faq-acc" aria-expanded="false">
           <header class="faq-head" role="button">
             <div class="faq-q">Сколько длится сессия?</div>
             <svg class="faq-chev" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -2163,22 +2201,32 @@
 
   <script>
     // Аккордеоны "Образование"
-    document.querySelectorAll('.edu-acc .edu-head').forEach(function(head){
-      head.addEventListener('click', function(){
-        const acc = head.parentElement;
-        const body = acc.querySelector('.edu-body');
-        const isOpen = acc.getAttribute('aria-expanded') === 'true';
+const eduItems = document.querySelectorAll('.edu-acc');
+eduItems.forEach(acc => {
+  const head = acc.querySelector('.edu-head');
+  const body = acc.querySelector('.edu-body');
 
-        // сворачиваем
-        if(isOpen){
-          acc.setAttribute('aria-expanded','false');
-          body.style.maxHeight = '0px';
-        }else{
-          acc.setAttribute('aria-expanded','true');
-          body.style.maxHeight = body.scrollHeight + 'px';
-        }
-      });
+  // начальная высота для открытых
+  if (acc.getAttribute('aria-expanded') === 'true') {
+    body.style.maxHeight = body.scrollHeight + 'px';
+  }
+
+  head.addEventListener('click', () => {
+    const isOpen = acc.getAttribute('aria-expanded') === 'true';
+
+    // закрываем все
+    eduItems.forEach(it => {
+      it.setAttribute('aria-expanded', 'false');
+      it.querySelector('.edu-body').style.maxHeight = '0px';
     });
+
+    // открываем текущий, если был закрыт
+    if (!isOpen) {
+      acc.setAttribute('aria-expanded', 'true');
+      body.style.maxHeight = body.scrollHeight + 'px';
+    }
+  });
+});
 
     // Внутренний "Показать ещё"
     const more = document.querySelector('.edu-more');
@@ -2208,21 +2256,32 @@
     });
 
     // Аккордеоны ресурсов
-    document.querySelectorAll('.res-acc .res-head').forEach(function(head){
-      head.addEventListener('click', function(){
-        const acc = head.parentElement;
+    const resItems = document.querySelectorAll('.res-acc');
+      resItems.forEach(acc => {
+        const head = acc.querySelector('.res-head');
         const body = acc.querySelector('.res-body');
-        const open = acc.getAttribute('aria-expanded') === 'true';
 
-        if(open){
-          acc.setAttribute('aria-expanded','false');
-          body.style.maxHeight = '0px';
-        }else{
-          acc.setAttribute('aria-expanded','true');
+        // начальная высота для открытых
+        if (acc.getAttribute('aria-expanded') === 'true') {
           body.style.maxHeight = body.scrollHeight + 'px';
         }
+
+        head.addEventListener('click', () => {
+          const isOpen = acc.getAttribute('aria-expanded') === 'true';
+
+          // закрываем все
+          resItems.forEach(it => {
+            it.setAttribute('aria-expanded','false');
+            it.querySelector('.res-body').style.maxHeight = '0px';
+          });
+
+          // открываем текущий, если был закрыт
+          if (!isOpen) {
+            acc.setAttribute('aria-expanded','true');
+            body.style.maxHeight = body.scrollHeight + 'px';
+          }
+        });
       });
-    });
 
     // пересчёт высот при ресайзе
     window.addEventListener('resize', function(){
