--- a/index.html
+++ b/index.html
@@ -1370,18 +1370,19 @@ a{color:inherit;text-decoration:none}
 .mobile-menu{
   position:fixed;
   top:0; left:0; right:0;
-  height:50vh;               /* половина экрана (можешь поставить 45vh, если хочешь ещё меньше) */
+  height:50vh;                  /* высота меню */
   z-index:200;
   background:#fff;
-  transform:translateY(-100%); 
-  transition:transform .25s ease;
+  transform:translateY(-100vh); /* уезжает за пределы всего экрана */
+  transition:transform .3s ease;
   display:flex; 
   flex-direction:column;
-  border-bottom-left-radius:16px;   /* для красоты можно скруглить */
+  border-bottom-left-radius:16px;
   border-bottom-right-radius:16px;
   box-shadow:0 4px 20px rgba(0,0,0,0.1);
 }
 .mobile-menu.open{ transform:translateY(0); }
+
 
 
 .menu-header {
